# bibiinstaller

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/source/: conf.py
examples/: readme.txt
examples/pyqt6_pyproject_toml_example/: bibiinstaller_configs.py  pyproject.toml
examples/pyqt6_setup_py_example/: bibiinstaller_configs.py  setup.py
examples/pyqt6_setup_py_example/src/pyqt6_example/: pyqt6_example_burning_widget.py
src/: setup.py  tmp_main.py
src/assets/Windows/icon_configs/: commands.txt
src/assets/Windows/mirrors/: pip.ini
src/bibiinstaller/: __init__.py  bibiflags.py  bibiinstaller.py  bibiinstaller.yaml  bibiinstaller_configs.py  bibiinstaller_windows.py  bibiinstaller_windows.yaml  flags_template.yaml  installer.py  learn_pypi_yarg.py  main.py  tmp.py
src/bibiinstaller/assets/Windows/: README.md
src/bibiinstaller/assets/Windows/exes/: config.ini
src/bibiinstaller/assets/Windows/icon_configs/: ResourceHacker.ini
src/bibiinstaller/assets/Windows/mirrors/: .mambarc
src/bibiinstaller/icon_configs/: commands.txt
src/bibiinstaller/nsi_templates/: application.nsi  bibiinstaller.nsi  test_nsi_templates.py
src/bibiinstaller/package_configs/: add_packages.txt  editable_packages.txt  extra_packages.txt  skip_packages.txt  unwanted_packages.txt
tests/: learn_env_path.py
