[project]
name = "bibiinstaller"
version = "0.1.0"
description = "Bibi Installer using pynsist"
authors = [
    {name = "Chunqi SHI", email = "chunqishi@gmail.com"},
]

dependencies = [
    "yarg>=0.1.9",
    "loguru>=0.7.2",
    "bibiflags>=0.1.5",
    "packaging>=24.0",
    "tomli>=2.0.1",
    "pillow>=10.3.0",
    "pyarmor>=8.5.2",
]
#requires-python = "==3.10.*"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
#        "pip==24.0",
#        "setuptools>=69.2.0",
]


[project.scripts]
bibiinstaller= "bibiinstaller.bibiinstaller_windows:main"
