[project]
name = "pyqt6_example"
version = "0.1.0"
description = "a pyqt6 example"
authors = [
    { name = "Chunqi SHI", email = "chunqishi@gmail.com" },
]

dependencies = [
    "PyQt6>=6.6.1"
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
]


[project.gui-scripts]
pyqt6_example = "pyqt6_example.pyqt6_example_burning_widget:main"
